--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,7 @@ jobs:
           
           # Install base dependencies with increased tolerance
           sudo apt-get install -y --no-install-recommends \
+            pkg-config \
             libwebkit2gtk-4.1-dev \
             libappindicator3-dev \
             librsvg2-dev \
@@ -95,6 +96,11 @@ jobs:
             libwebkit2gtk-4.1-dev:i386 \
             libwebkit2gtk-4.1-dev:arm64 \
             libwebkit2gtk-4.1-dev:armhf || true
+
+          # Configure pkg-config for cross-compilation
+          export PKG_CONFIG_PATH="/usr/lib/i386-linux-gnu/pkgconfig:/usr/lib/arm-linux-gnueabihf/pkgconfig:/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/lib/riscv64-linux-gnu/pkgconfig"
+          export PKG_CONFIG_SYSROOT_DIR="/usr/i386-linux-gnu:/usr/arm-linux-gnueabihf:/usr/aarch64-linux-gnu:/usr/riscv64-linux-gnu"
+          export PKG_CONFIG_ALLOW_CROSS=1
       
       - name: install frontend dependencies
         run: npm install
